infra/kubernetes/cluster-01/apps/media/jackett/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett-deployment
  namespace: media
  labels:
    app: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
        - name: jackett
          image: ghcr.io/linuxserver/jackett:0.21.696
          ports:
            - name: web
              containerPort: 9117
          volumeMounts:
            - mountPath: /config
              name: jackett-config-storage
            - mountPath: /downloads
              name: downloads-nfs
      volumes:
        - name: jackett-config-storage
          persistentVolumeClaim:
            claimName: jackett-config-claim
        - name: downloads-nfs
          nfs:
            server: 10.2.1.2
            path: /mnt/pool_01/Downloads
