infra/kubernetes/cluster-01/apps/media/jackett/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jackett-svc
  namespace: media
spec:
  selector:
    app: jackett
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: web
