infra/kubernetes/cluster-01/apps/media/jackett/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns/is-public: "true"
    hajimari.io/enable: "true"
    hajimari.io/icon: "icon-park:men-jacket"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - hosts:
        - "jackett.${SECRET_DOMAIN}"
      secretName: "jackett.${SECRET_DOMAIN}"
  rules:
    - host: "jackett.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jackett-svc
                port:
                  number: 80
